# webapp-base-project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/skills/add-backend-module/: SKILL.md
.claude/skills/auth-security/: SKILL.md
.claude/skills/backend-tests/: SKILL.md
.claude/skills/db-migrations/: SKILL.md
backend/: Dockerfile  pyproject.toml
backend/db/: migrate.py
backend/db/migrations/: 001_230126_adds_user_tables.rollback.sql  001_230126_adds_user_tables.sql  002_230126_adds_session_tables.rollback.sql  002_230126_adds_session_tables.sql
backend/src/: main.py
backend/src/db/models/token/: refresh_token.py  session_token.py
backend/src/db/models/user/: role.py  user.py  user_role.py
backend/src/settings/: auth_settings.py  base.py  database_settings.py  llm_settings.py  settings.py
