[project]
name = "coachlm-backend"
version = "0.1.0"
description = "CoachLM Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "psycopg[binary]>=3.3.2",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uuid7>=0.1.0",
    "yoyo-migrations>=8.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312
1"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]